# echo-proxy-core

./: .dockerignore  .gitignore  Cargo.toml  README.md  TESTING.md  run_all_tests.sh  run_integration_tests.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/: release-drafter.yml
.github/workflows/: release.yml  rust.yml
client/: Cargo.toml
client/src/: geoip.rs  geosite.rs  lib.rs  main.rs
core-lib/: Cargo.toml
core-lib/src/: frame.rs  lib.rs  session.rs
deploy/: Dockerfile.server  README.md  docker-compose.yml  envoy.yaml  gen-certs.sh
deploy/caddy-poc/: Caddyfile  client-test.toml  run-caddy.sh
deploy/certs/: server.crt  server.key
docs/: http3-webtransport-edge-strategy.md  udp-overload-defense-todo.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: connect.rs  errors.rs  http.rs  protocol.rs  reconnect.rs  socks.rs  stability.rs
server/: Cargo.toml
server/src/: dataplane.rs  h3_listen.rs  lib.rs  main.rs
server/tests/: cli_cert.rs  http3_health.rs
tests/: basic_proxy_integration.rs  proxy_workflow_integration.rs  simple_integration.rs
tests/integration/: mod.rs
