
[workspace]
members = ["client", "core-lib", "server", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
core-lib = { path = "core-lib" }
async-std = "1.13"
async-tungstenite = "0.30"
futures = "0.3"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
rand = "0.9"
semver = "1.0"
uuid = { version = "1.17", features = ["v4"] }
