
[workspace]
members = ["client", "core-lib", "server", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
core-lib = { path = "core-lib" }
wtransport = { version = "0.7", features = ["dangerous-configuration"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = "1.0"
ipnet = "2.12"
geosite-rs = "0.1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
