[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-lib = { path = "../core-lib" }
async-std = "1.13.1"
async-tungstenite = { version="0.30.0", features=["async-native-tls"] }
base64 = "0.22.1"
clap = { version = "4.5.42", features = ["derive"] }
futures = "0.3.31"
