[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
core-lib.workspace = true
async-std.workspace = true
async-tungstenite = { workspace = true, features = ["async-native-tls"] }
clap.workspace = true
serde.workspace = true
toml.workspace = true
futures.workspace = true
futures-util.workspace = true
ipnet.workspace = true
geosite-rs.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
