[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
wtransport.workspace = true
tokio.workspace = true
futures.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
ipnet.workspace = true
geosite-rs.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
