[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
server = { path = "../server" }
client = { path = "../client" }
core-lib.workspace = true
async-std = { workspace = true, features = ["attributes"] }
async-tungstenite = { workspace = true, features = ["async-std-runtime"] }
futures.workspace = true
uuid.workspace = true
