[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
server = { path = "../server" }
client = { path = "../client" }
tokio = { workspace = true }
wtransport.workspace = true
futures.workspace = true
ipnet.workspace = true
