[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
core-lib.workspace = true
async-std.workspace = true
async-tungstenite = { workspace = true, features = ["async-std-runtime"] }
futures.workspace = true
futures-util.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
uuid.workspace = true
