[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
wtransport.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
