[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
wtransport.workspace = true
tokio.workspace = true
bytes.workspace = true
http.workspace = true
quinn.workspace = true
h3.workspace = true
h3-quinn.workspace = true
h3-webtransport.workspace = true
futures.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bytes.workspace = true
client = { path = "../client" }
futures.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
quinn.workspace = true
rustls.workspace = true
